tests/sksl/errors/StaticSwitchWithConditionalExit.glsl
### Compilation failed:

error: 5: static switch contains non-static conditional break
1 error
